[package]
name = "rsddp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.27.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
oneshot = "0.1.6"

[lib]
crate-type = ["rlib", "dylib"]